--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ package_dir =
 packages = find:
 python_requires = >=3.9
 install_requires =
-    lxml
+    aiohttp >=3.7
+    lxml >=4.6
 include_package_data = True
 
 [options.packages.find]
