jsonargparse used for config parsing, with CLI and env support

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ packages = find:
 python_requires = >=3.9
 install_requires =
     aiohttp >=3.7
+    jsonargparse >= 3.17
     lxml >=4.6
 include_package_data = True
 
@@ -29,4 +30,4 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    steam-review-checker = steam_review_checker:run_app
+    steam-review-checker = steam_review_checker:run_from_cli
